# game-prices-rs

./: .gitignore  Cargo.toml  diesel.toml  index.html  jsconfig.json  package-lock.json  package.json  readme.md  tsconfig.json  vite.config.js
backend/migrations/2024-01-21-222613_games/: down.sql  up.sql
backend/migrations/2024-01-25-183542_stores/: down.sql  up.sql
backend/migrations/2024-01-25-194436_currencies/: down.sql  up.sql
backend/migrations/2024-01-25-194651_purchases/: down.sql  up.sql
backend/src/: main.rs  models.rs  repositories.rs  schema.rs  services.rs
backend/tests/: games.http  stores.http
docs/: entities.md  index.md
frontend/: index.html  vite.config.js
frontend/src/: App.jsx  App.module.css  App.tsx  FallbackComponent.jsx  index.css  index.jsx  index.tsx
frontend/src/Games/: GameList.jsx  GameList.tsx
frontend/src/Orders/: OrderList.jsx
frontend/src/Stores/: StoreList.tsx
frontend/src/assets/: site.webmanifest
migrations/2024-01-21-222613_games/: down.sql  up.sql
migrations/2024-01-25-183542_stores/: down.sql
migrations/2024-01-25-194436_currencies/: up.sql
migrations/2024-01-25-194651_purchases/: up.sql
src/: main.rs  models.rs  schema.rs
