[package]
name = "game-prices-rs"
version = "0.1.0"
edition = "2021"
default-run = "backend"

[[bin]]
name = "backend"
path = "backend/src/main.rs"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
time = { version = "0.3.31", features = ["serde"] }
bigdecimal = { version = "0.4.3", features = ["serde"] }
diesel = { version = "2.1.4", features = ["postgres", "time", "numeric"] }
dotenvy = "0.15.7"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
